# mutagen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  performance_results.json  pyproject.toml
.github/workflows/: CI.yml  codeql.yml  pre-merge.yml  release.yml  test.yml
benchmarks/: SUMMARY.md  baseline_benchmark.py  benchmark_2026-02-05_14-36-28.txt  benchmark_2026-02-05_15-17-15.txt  benchmark_2026-02-05_17-04-47.txt  history.json  performance_results.json  run_benchmarks.sh  update_summary.py
python/mutagen_rs/: __init__.py  __init__.pyi  _flactypes.py  _id3frames.py  _mp4types.py  easyid3.py  easymp4.py  flac.py  id3.py  mp3.py  mp4.py  oggvorbis.py
src/: lib.rs
src/common/: util.rs
src/flac/: mod.rs
src/id3/: frames.rs  header.rs  id3v1.rs  tags.rs  writer.rs
src/mp3/: mod.rs  xing.rs
src/mp4/: atom.rs  mod.rs
src/ogg/: mod.rs
src/vorbis/: mod.rs
tests/: generate_test_files.py  test_api_compat.py  test_drop_in.py  test_performance.py
