[package]
name = "mutagen-rs"
version = "0.1.2"
edition = "2021"
description = "High-performance audio metadata library — drop-in replacement for mutagen"
license = "MIT"
repository = "https://github.com/AiBrush/mutagen-rs"
readme = "README.md"
keywords = ["audio", "metadata", "id3", "flac", "mp3"]
categories = ["multimedia::audio", "parser-implementations"]
exclude = [
    "test_files/",
    "tests/",
    "benches/",
    "lofty-rs/",
    "python/",
    ".github/",
    "baseline_results.json",
    "performance_results.json",
    "task.md",
]

[lib]
name = "mutagen_rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
memmap2 = "0.9"
thiserror = "2.0"
encoding_rs = "0.8"
byteorder = "1.5"
flate2 = "1.0"
memchr = "2.7"
rayon = "1.10"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lofty = "0.22"

[[bench]]
name = "parse_comparison"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
